--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title">Hello</string>
-    <string name="level">Level 1</string>
+    <string name="level"></string>
 
 </resources>
