--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Android Test</string>
+    <string name="app_name">Math Challenge</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title">Hello</string>
+    <string name="start">Start</string>
     <string name="level"></string>
 
 </resources>
