--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="start">Start</string>
     <string name="level"></string>
     <string name="HowTo">You will be shown an initial equation, such as: \n 5+2 \n Keep the answer, 7, in mind.</string>
+    <string name="finished">Congratulations! You\'ve finished! Come back soon for more levels!</string>
 
 </resources>
